packages/styles/src/dynamic-page.scss
@use "sass:map";

@import "./new-settings";
@import "./mixins";

$block: #{$fd-namespace}-dynamic-page;

.#{$block} {
  $fd-dynamic-page-background-color: var(--sapObjectHeader_Background);
  $fd-dynamic-page-padding-top-bottom: 0.5rem;
  $fd-dynamic-page-header-padding-top-bottom: 1rem;
  $fd-dynamic-page-box-shadow: var(--sapContent_HeaderShadow);
  $fd-dynamic-page-button-group-width: 4rem;
  $fd-dynamic-page-button-group-height: 0.0625rem;
  $fd-dynamic-page-focus-outline-offset: -0.25rem;

  @mixin fd-background-page($background-color) {
    .#{$block}__content {
      background-color: $background-color;
    }
  }

  @mixin fd-responsive-page($padding-y: 0,$padding-x: 1rem) {
    .#{$block}__title-area {
      @include responsive-page($fd-dynamic-page-padding-top-bottom, $padding-x);

      &--collapsed {
        padding-block-end: 1rem;
      }
    }

    .#{$block}__collapsible-header,
    .#{$block}__content {
      @include responsive-page($padding-y, $padding-x);
    }

    .#{$block}__tabs {
      @include responsive-page(0, $padding-x);
    }

    .#{$block}__summarized-title-area {
      @include responsive-page($padding-y);
    }
  }

  @mixin responsive-page($padding-y: 0, $padding-x: 1rem) {
    padding-block: $padding-y;
    padding-inline: $padding-x;
  }

  @mixin no-shadow() {
    box-shadow: none;
  }

  @include fd-reset();
  @include fd-flex(column);

  &__sr-only {
    @include fd-screen-reader-only();
  }

  &__header-button {
    @include fd-screen-reader-only();

    @include fd-focus() {
      & + .#{$block}__title-area {
        outline-offset: $fd-dynamic-page-focus-outline-offset;
        outline: var(--sapContent_FocusColor) var(--sapContent_FocusStyle) var(--sapContent_FocusWidth); 
      }
    }
  }

  &__header-fixed {
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    z-index: 3;
  }

  &__header {
    @include fd-reset();

    @include fd-flex(column) {
      justify-content: space-between;
    }
  }

  &__title-area {
    @include fd-reset();

    @include fd-flex(column) {
      justify-content: space-between;
    }

    min-height: 3rem;
    word-wrap: break-word;
    background-color: $fd-dynamic-page-background-color;
    z-index: 1;

    @include fd-hover() {
      background: var(--sapObjectHeader_Hover_Background);
      border-bottom: var(--fdDynamicPage_Hover_Border_Bottom);
      cursor: pointer;
    }

    &--collapsed {
      padding-block-end: 1rem;

      .#{$block}__title {
        font-size: var(--fdDynamicPage_Title_Collapsed_Font_Size);
      }
    }

    &[aria-hidden="true"] {
      display: none;
    }
  }

  &__main-container {
    @include fd-reset();

    @include fd-flex() {
      justify-content: space-between;
    }
  }

  &__title-container {
    @include fd-reset();

    @include fd-flex() {
      align-items: center;
    }
  }

  &__breadcrumb {
    @include fd-reset();
    
    padding-block: 0.5rem 0.25rem;
    padding-inline: 0;
  }

  &__breadcrumb-title-container {
    @include fd-reset();

    flex: 1;
    min-width: 0;
  }

  &__breadcrumb-container {
    @include fd-reset();

    @include fd-flex-vertical-center() {
      justify-content: space-between; // to space breadcrumb and close button at each end
    }
  }

  &__title {
    @include fd-reset();

    color: var(--fdDynamicPage_Title_Color);
    font-size: var(--fdDynamicPage_Title_Font_Size);
    font-family: var(--fdDynamicPage_Title_Font_Family);

    @include fd-ellipsis();

    // if fd-link is used as a child class
    .#{$fd-namespace}-link {
      @include fd-ellipsis();

      padding-inline: 0;
      padding-block: 0;
      color: var(--sapGroup_TitleTextColor);
      font-size: var(--sapFontHeader3Size);
      max-width: 100%;
      vertical-align: bottom;
    }

    &--wrap {
      white-space: initial;
    }
  }

  &__subtitle {
    @include fd-reset();
    @include fd-ellipsis();

    color: var(--fdDynamicPage_Subtitle_Color);
    font-size: var(--sapFontSize);
    margin-top: 0.25rem;

    &--wrap {
      white-space: initial;
    }
  }

  &__title-content {
    @include fd-reset();
    @include fd-ellipsis();

    padding-block: 0;
    padding-inline: 1rem .2rem;
    vertical-align: baseline;
  }

  &__title-subtitle-container {
    @include fd-reset();
    @include fd-flex(column);
    @include fd-ellipsis();
  }

  &__toolbar-container {
    @include fd-reset();
    @include fd-flex-vertical-center();

    margin-inline-start: auto;
  }

  .#{$block}__toolbar {
    @include fd-reset-spacing();

    padding-inline-start: 1rem;
    background: transparent;

    &--actions,
    &--content {
      padding-block: 0;
      padding-inline: 0;
    }
  }

  &__summarized-title-area {
    @include fd-reset();

    @include fd-flex-vertical-center() {
      justify-content: space-between;
    }

    @include fd-fiori-focus($fd-dynamic-page-focus-outline-offset);

    word-wrap: break-word;
    background: var(--sapObjectHeader_Background);
    box-shadow: $fd-dynamic-page-box-shadow;
    height: 2rem;
    z-index: 1;

    &--no-shadow {
      @include no-shadow();
    }

    &[aria-hidden="true"] {
      display: none;
    }
  }

  &__summarized-title {
    @include fd-reset();
    @include fd-ellipsis();

    color: var(--sapGroup_TitleTextColor);
    font-size: var(--sapFontHeader5Size);
    padding-inline: 0;
    padding-block: 0;
    line-height: 2rem;
  }

  &__collapsible-header-container {
    // contains B and B1
    @include fd-reset();
  }

  &__collapsible-header {
    @include fd-reset();

    background-color: $fd-dynamic-page-background-color;
    padding-block: $fd-dynamic-page-header-padding-top-bottom;
    padding-inline: 0;

    &[aria-hidden="true"] {
      display: none;
    }
  }

  .#{$block}__tabs {
    @include fd-reset-spacing();

    &--overflow {
      overflow: hidden;
    }

    &--add-shadow {
      box-shadow: $fd-dynamic-page-box-shadow;
    }
  }

  &__collapsible-header-visibility-container {
    @include fd-reset();
    @include fd-flex-center();

    box-shadow: $fd-dynamic-page-box-shadow;
    background-color: $fd-dynamic-page-background-color;
    z-index: 2;
    min-height: $fd-dynamic-page-button-group-height;

    // left and right gradient for the pin/collapse buttons
    &--left-gradient {
      background-image: var(--fdDynamicPage_Button_Left_Gradient);
      width: $fd-dynamic-page-button-group-width;
      height: $fd-dynamic-page-button-group-height;

      @include fd-rtl() {
        background-image: var(--fdDynamicPage_Button_Right_Gradient);
      }
    }

    &--right-gradient {
      background-image: var(--fdDynamicPage_Button_Right_Gradient);
      width: $fd-dynamic-page-button-group-width;
      height: $fd-dynamic-page-button-group-height;

      @include fd-rtl() {
        background-image: var(--fdDynamicPage_Button_Left_Gradient);
      }
    }

    &--button-group {
      @include fd-reset();
      @include fd-flex-center();

      background: var(--fdDynamicPage_Button_Group_Background);
      width: 4.25rem;
      height: $fd-dynamic-page-button-group-height;
      z-index: 1;
    }

    &[aria-hidden="true"] {
      display: none;
    }

    &--no-shadow {
      @include no-shadow();
    }
  }

  &__pin-button,
  &__expand-button,
  &__collapse-button {
    $fd-dynamic-page-button-width: 1.5rem;
    $fd-dynamic-page-button-height: 1.5rem;
    $fd-dynamic-page-button-clickable-height: 2rem;
    $fd-dynamic-page-button-touchable-area: ($fd-dynamic-page-button-clickable-height - $fd-dynamic-page-button-height) * 0.5;

    --fdButtonBackgroundColor: var(--fdDynamicPage_Button_Pin_Background);

    margin-block: 0;
    margin-inline: 0.25rem;
    padding-inline: 0;
    padding-block: 0;
    width: $fd-dynamic-page-button-width;
    height: $fd-dynamic-page-button-height;
    min-width: $fd-dynamic-page-button-width;

    // Extended touchable area
    &::before {
      height: $fd-dynamic-page-button-clickable-height;
      width: 100%;
      top: -$fd-dynamic-page-button-touchable-area;
      bottom: -$fd-dynamic-page-button-touchable-area;
    }

    &[aria-hidden="true"] {
      display: none;
    }
  }

  &__content {
    @include fd-reset();

    background-color: var(--sapBackgroundColor);
    overflow-y: auto;
  }

  &__footer {
    position: fixed;
    left: 0;
    right: 0;
    bottom: 0;
    margin-block: 0 $fd-dynamic-page-padding-top-bottom;
    margin-inline: $fd-dynamic-page-padding-top-bottom;
  }

  &--sm {
    @include fd-responsive-page($fd-dynamic-page-header-padding-top-bottom);

    .#{$block}__breadcrumb {
      padding-inline: 0;
      padding-block: 0;
    }

    .#{$block}__title-container {
      align-items: center;
    }

    .#{$block}__toolbar {
      padding-inline-start: 1rem;
      margin-inline-start: auto;

      &--content {
        margin-inline-start: 0;
      }
    }
  }

  &--md,
  &--lg {
    @include fd-responsive-page($fd-dynamic-page-header-padding-top-bottom, 2rem);
  }

  &--xl {
    @include fd-responsive-page($fd-dynamic-page-header-padding-top-bottom, 3rem);
  }

  &--md {
    .#{$block}__toolbar {
      padding-inline: 0;
      padding-block: 0;
    }
  }

  &--list-bg {
    .#{$block}__content {
      background-color: var(--fdDynamicPage_Content_List_Background);
    }
  }

  &--transparent-bg {
    .#{$block}__content {
      background-color: var(--fdDynamicPage_Content_Transparent_Background);
    }

    .#{$block}__title-area {
      background: var(--fdDynamicPage_Title_Header_Transparent_Background);
    }

    .#{$block}__collapsible-header {
      background-color: var(--fdDynamicPage_Title_Header_Transparent_Background);
    }
  }
}

